2017-05-04 Mark Ogden
	* thames-0.1.1h release
	* added STACK ERROR to caught errors

2017-05-01 Mark Ogden
	* thames-0.1.1g release
	* fixed isis_load to support pascal80
	* fixed handling of end of file in line edit mode

2017-04-21 Mark Ogden
	* thames-0.1.1f release.
	* processed command is now echoed to stdout
	* added thames.md file to describe thanges

2017-04-16 Mark Ogden
	* thames-0.1.1e release.
	* misc bug fixes
	* better handling of dos file names e.g. x: and \
	* Enhancements to command line processing
	  * Added -m option that converts unix/dos names to isis names
	    automatically creating isis drive mappings if required
	    It will honour environment defined mappings (useful for includes)
	* Enhancements to detect error messages to :CO: and return
	  exit code 1 if any occur
	  * Currently supports PLM80, LIB, LINK, LOCATE, ASM80, IXREF
	    but will also detect common errors in other ISIS applications
	  * The option -u will cause UNRESOLVED and UNSATISFIED to not be
	    treated as errors. This is needed for overlay support.
	  * The option -o will cause OVERLAP to not be treated an error

2012-09-12 John Elliott

	* thames-0.1.1 release.

	* [Mark Ogden] Corrected various bugs.

2011-01-10 John Elliott

	* thames-0.1.0 release.
