@@ -1,3 +1,0 @@
-10 i = 10
-20 print i
-
