@@ -120,7 +120,7 @@
     <ClCompile>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <CompileAs>CompileAsC</CompileAs>
-      <PreprocessorDefinitions>_NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_NDEBUG;_CONSOLE;%(PreprocessorDefinitions);</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..</AdditionalIncludeDirectories>
       <OmitFramePointers>true</OmitFramePointers>
       <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -144,7 +144,9 @@
     <ClCompile Include="isis.c" />
     <ClCompile Include="isisfile.c" />
     <ClCompile Include="isisload.c" />
-    <ClCompile Include="thames.c" />
+    <ClCompile Include="thames.c">
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">_NDEBUG;_CONSOLE;%(PreprocessorDefinitions);Z80</PreprocessorDefinitions>
+    </ClCompile>
     <ClCompile Include="utils.c" />
     <ClCompile Include="z80.c" />
   </ItemGroup>
