@@ -7,12 +7,18 @@
     <LocalDebuggerEnvironment>ISIS_F0=.</LocalDebuggerEnvironment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LocalDebuggerCommandArguments>-m ../plm80v40/plm80 ./getd.plm code print(all abc,x)</LocalDebuggerCommandArguments>
+    <LocalDebuggerCommandArguments>-m ..\itools\plm80_4.0\plm80 a.plm</LocalDebuggerCommandArguments>
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
+    <LocalDebuggerWorkingDirectory>..\..\test</LocalDebuggerWorkingDirectory>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LocalDebuggerCommandArguments>-m ../../itools/link_3.0/link "obj/consol.obj,/cusp4.lib,../../itools/plm80.lib/plm80.lib,../../itools/isis_3.4/system.lib" to obj/consol.rel map "print(lst/consol.lin)"</LocalDebuggerCommandArguments>
     <LocalDebuggerWorkingDirectory>..\..\src\toolbox_1.0</LocalDebuggerWorkingDirectory>
+    <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LocalDebuggerCommandArguments>-m ..\itools\plm80_4.0\plm80 a.plm</LocalDebuggerCommandArguments>
+    <LocalDebuggerWorkingDirectory>..\..\test</LocalDebuggerWorkingDirectory>
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
   </PropertyGroup>
 </Project>
