@@ -2,8 +2,8 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(bin/thames.c)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_MACRO_DIR([m4])
-VERSION=0.1.1h
-UPDATED='May 4, 2017'
+VERSION=0.1.2
+UPDATED='June 8, 2017'
 AM_INIT_AUTOMAKE(thames, $VERSION)
 AM_CONFIG_HEADER(config.h)
 LT_INIT
