@@ -6,7 +6,7 @@
 <body>
 
     <h1 id="thames-an-isis-ii-emulator">thames: An ISIS-II Emulator</h1>
-<p><strong>(John Elliott, 17 November 2012, updated by Mark Ogden, 1 May 2017)</strong></p>
+<p><strong>(John Elliott, 17 November 2012, updated by Mark Ogden, 8-Jun 2017)</strong></p>
 <p><em>thames</em> emulates enough of the ISIS-II environment to be able to run the following
 programs (used in the CP/M 3 build process):</p>
 <ul>
@@ -15,6 +15,10 @@ programs (used in the CP/M 3 build process):</p>
 <li>link: ISIS-II object linker v3.0</li>
 <li>locate: ISIS-II object locater v3.0</li>
 <li>objhex: Converts an ISIS-II object file to hex format (v2.2)</li>
+<li>Modified to emulate 8080 (v0.1.2) this allows basic to work, also removed tstate counting
+which was not used. Partial implementatio of CSTS implementation (bios 7) using kbhit,
+unfortunately to getchar requires cr before returing. Not a major problem but we aware.</li>
+<li><strong>Note</strong> to revert to z80 emulation uncomment the #define Z80 line in thames.h</li>
 </ul>
 <p>Other programs known to work include</p>
 <ul>
@@ -23,9 +27,8 @@ programs (used in the CP/M 3 build process):</p>
 <li>lib v2.1</li>
 <li>Fort80 v2.1</li>
 <li>Pasc80 v2.2 - from thames 0.1.1g</li>
-<li>Note Basic does not work due to its reliance on 8080/5 behaviour on partity vs. overflow
-that Thames' z80 emulator implements. It also relies on the bios call CSTS and for
-at least one version bios call LO, neither of which are supported in Thames</li>
+<li>Basic v1.0, v1.1, vx021 from thames 0.1.2 - note limitation on kbd hit which
+is sensed but needs cr to continue</li>
 </ul>
 <h2 id="installing">Installing</h2>
 <p>Installation should just be a matter of the usual sequence of commands:</p>
