@@ -1,3 +1,12 @@
+2017-06-08 Mark Ogden
+	* thames-0.1.2 release
+	* modified emulation to 8080 to allow basic to work. Can be reverted
+	  by defining Z80 in thames.h
+	* removed tstate counting as it was not used
+	* modified bios intercept to use pure 8080 code rather than z80 ix
+	  register
+	* added partial support for CSTS
+	
 2017-05-04 Mark Ogden
 	* thames-0.1.1h release
 	* added STACK ERROR to caught errors
